# x402

./: CONTRIBUTING.md  README.md  X402_NEXTJS_GUIDE.md
.claude/: 1_siwx_extension.md  N_siwx-review-fixes-plan.md  siwx-caip122-compliance-plan.md  siwx-spec-deviations.md
.github/: labeler.yml  pull_request_template.md
.github/workflows/: check_go.yml  check_python.yml  labeler.yml  update-docs.yml
docs/: AGENTS.md  docs.json  faq.md  introduction.md
docs/core-concepts/: bazaar-discovery-layer.mdx  client-server.md  facilitator.md  http-402.md  network-and-token-support.mdx  wallet.md
docs/getting-started/: quickstart-for-buyers.mdx  quickstart-for-sellers.mdx
docs/guides/: mcp-server-with-x402.md  migration-v1-to-v2.mdx
e2e/: pnpm-lock.yaml  test.ts  tsconfig.json
e2e/clients/httpx/: install.sh  main.py  pyproject.toml  test.config.json
e2e/clients/requests/: build.sh  install.sh  main.py  pyproject.toml  run.sh  test.config.json
e2e/extensions/: bazaar.ts
e2e/facilitators/go/: main.go
e2e/facilitators/python/: README.md  bazaar.py  build.sh  install.sh  main.py  pyproject.toml  run.sh  test.config.json
e2e/facilitators/typescript/: index.ts
e2e/legacy/clients/httpx/: pyproject.toml
e2e/legacy/clients/requests/: pyproject.toml
e2e/legacy/servers/fastapi/: pyproject.toml
e2e/legacy/servers/flask/: pyproject.toml
e2e/servers/express/: index.ts
e2e/servers/fastapi/: install.sh  main.py  pyproject.toml  test.config.json
e2e/servers/flask/: install.sh  main.py  pyproject.toml  test.config.json
e2e/servers/gin/: main.go
e2e/servers/hono/: index.ts
e2e/servers/next/: proxy.ts
e2e/src/: discovery.ts  sampling.ts  types.ts
e2e/src/cli/: args.ts  interactive.ts
e2e/src/facilitators/: generic-facilitator.ts
e2e/src/networks/: networks.ts
e2e/src/servers/: generic-server.ts
examples/python/: README.md
examples/python/clients/: README.md
examples/python/clients/advanced/: README.md  builder_pattern.py  hooks.py  index.py  preferred_network.py  pyproject.toml
examples/python/clients/custom/: .env-local  README.md  main.py  pyproject.toml
examples/python/clients/httpx/: .env-local  README.md  main.py  pyproject.toml
examples/python/clients/requests/: README.md  main.py  pyproject.toml
examples/python/facilitator/: .env-local  README.md  main.py  pyproject.toml
examples/python/legacy/discovery/: pyproject.toml
examples/python/servers/advanced/: README.md  bazaar.py  custom_token.py  dynamic_pay_to.py  dynamic_price.py  hooks.py  paywall.py  pyproject.toml
examples/python/servers/custom/: README.md  main.py  pyproject.toml
examples/python/servers/fastapi/: README.md  main.py  pyproject.toml
examples/python/servers/flask/: .env-local  README.md  main.py  pyproject.toml
examples/typescript/: pnpm-lock.yaml
examples/typescript/clients/fetch/: index.ts
examples/typescript/clients/sign-in-with-x/: .env-local  eslint.config.js  index.ts  package.json  pnpm-lock.yaml  test-logs.txt
examples/typescript/servers/cloudfront-lambda-edge/: README.md  package.json
examples/typescript/servers/sign-in-with-x/: .env-local  index.ts  package.json  pnpm-lock.yaml  siwx-middleware.ts  tsconfig.json
go/: .changie.yaml  CHANGELOG.md  CONTRIBUTING.md  Makefile  errors.go  errors_test.go  facilitator.go  facilitator_hooks.go  facilitator_hooks_test.go  facilitator_test.go  server.go  server_hooks.go  server_hooks_test.go  server_test.go  types.go
go/extensions/bazaar/: bazaar_test.go  facilitator.go
go/http/: client_test.go  facilitator_client.go  facilitator_client_test.go  server.go  server_test.go
go/http/gin/: middleware_test.go
go/legacy/pkg/facilitatorclient/: facilitatorclient.go
go/mechanisms/evm/: DEFAULT_ASSET.md  README.md  constants.go  types.go  utils.go
go/mechanisms/svm/: constants.go  types.go  utils.go
go/signers/evm/: client_test.go
go/test/integration/: svm_test.go
go/test/mocks/cash/: cash.go
go/test/unit/: evm_test.go  http_test.go
python/: CONTRIBUTING.md
python/legacy/: README.md  pyproject.toml
python/legacy/tests/: test_paywall.py
python/x402/: CHANGELOG.md  README.md  pyproject.toml
python/x402/extensions/: README.md
python/x402/http/: README.md
python/x402/http/clients/: README.md
python/x402/http/middleware/: README.md
python/x402/mechanisms/evm/: README.md  constants.py
python/x402/mechanisms/svm/: README.md
python/x402/mechanisms/svm/exact/: facilitator.py
python/x402/mechanisms/svm/exact/v1/: facilitator.py
python/x402/tests/: __init__.py  conftest.py
python/x402/tests/integrations/: __init__.py  test_async_behavior.py  test_core.py  test_evm.py  test_http_integration.py  test_svm.py
python/x402/tests/mocks/: __init__.py  cash.py
python/x402/tests/unit/: __init__.py
python/x402/tests/unit/core/: __init__.py  test_client.py  test_facilitator.py  test_from_config.py  test_server.py
python/x402/tests/unit/extensions/: __init__.py
python/x402/tests/unit/extensions/bazaar/: __init__.py  test_facilitator.py  test_resource_service.py  test_server.py  test_types.py  test_v1.py
python/x402/tests/unit/http/: __init__.py  test_utils.py  test_x402_http_client.py
python/x402/tests/unit/http/clients/: __init__.py  test_httpx.py  test_requests.py
python/x402/tests/unit/http/middleware/: __init__.py  test_fastapi.py  test_flask.py
python/x402/tests/unit/mechanisms/evm/: __init__.py  test_client.py  test_facilitator.py  test_index.py  test_server.py  test_signer.py  test_types.py
python/x402/tests/unit/mechanisms/svm/: __init__.py  test_client.py  test_facilitator.py  test_index.py  test_server.py  test_signer.py  test_types.py
specs/: x402-specification-v2.md
specs/extensions/: bazaar.md  eip2612_gas_sponsoring.md  erc20_gas_sponsoring.md  sign-in-with-x.md
specs/schemes/exact/: scheme_exact_algo.md  scheme_exact_aptos.md  scheme_exact_evm.md
typescript/: CONTRIBUTING.md  package.json  pnpm-lock.yaml
typescript/.changeset/: config.json  siwx-extension.md
typescript/site/: CHANGELOG-v2.md  package.json
typescript/site/app/: page.tsx
(+94 files in other folders)
