[project]
name = "x402-requests-example"
version = "0.1.0"
description = "Example of using x402 v2 SDK with requests"
requires-python = ">=3.10"
dependencies = [
    "python-dotenv>=1.0.0",
    "x402[requests,evm,svm]",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.hatch.metadata]
allow-direct-references = true

[tool.uv]
package = false

[tool.uv.sources]
x402 = { path = "../../../../python/x402", editable = true }
